Enums is added